<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradios"
    >

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/image_pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@color/rosado"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dicesi"
                android:textColor="@color/coloblanco"
                android:textSize="@dimen/tama_hab"
                android:text="@string/habitacion"

                />

            <TextView
                android:id="@+id/txt_num_hab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textColor="@color/coloblanco"
                android:textSize="@dimen/tama_hab"
                android:text="@string/num_hab" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/dicesi"
            android:background="@color/backgroundtext_card"
            >
            <TextView
                android:id="@+id/text_inqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_inquilino"
                android:textColor="@color/coloblanco"
                android:textSize="@dimen/editText_textsize_login"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_texto_feha_pago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_proxi_pago"
                    android:textColor="@color/coloblanco" />

                <TextView
                    android:id="@+id/txt_fecha_prox_pago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fecha_prox_pago"
                    android:textColor="@color/coloblanco" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_precio_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pago_base"
                android:textColor="@color/coloblanco" />
            <TextView
                android:id="@+id/txt_precio_pagado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/text_pago_pagado"
                android:textColor="@color/coloblanco" />
         </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estadoswicht"
                    android:textColor="@color/coloblanco"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txt_estadohabit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/coloblanco"
                    android:text="@string/habi_free" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>