<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".presentacion.view.activity.LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/alquiler" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormulario">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_i_usu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_user"
                    android:hint="@string/usuario" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormulario"
                android:paddingBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_i_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_ingresar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_entrar"
                android:layout_margin="@dimen/layout_margin_txt"
                android:theme="@style/RaiseButttonDark"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:layout_editor_absoluteY="362dp">

                <TextView
                    android:id="@+id/txt_pregunta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pregunta_cuenta"

                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextPrimary" />

                <TextView
                    android:id="@+id/txt_link_creaaccond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/link_crearaccond"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
