<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.view.activity.CreateAccountActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">


            <include layout="@layout/actionbar_toolbar"/>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormulario"
                android:layout_margin="@dimen/layout_margin_txt">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_c_nombre"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/icon_user"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormulario"
                android:layout_margin="@dimen/layout_margin_txt">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_c_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_user"
                    android:hint="@string/apellido" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormulario"
                android:layout_margin="@dimen/layout_margin_txt">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_c_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_mensaje"
                    android:hint="@string/correo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormulario"
                android:layout_margin="@dimen/layout_margin_txt">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_c_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginBottom="20dp"
                    android:drawableLeft="@drawable/icon_password"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_txt"
                android:theme="@style/RaiseButttonDark"
                android:text="@string/registrar"
                />



        </LinearLayout>



    </ScrollView>


</android.support.constraint.ConstraintLayout>
